# odigos

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  config.yaml  config.yaml.example  deploy-testers.sh  docker-compose.test.yml  docker-compose.yml  install-bare.sh  install-voice.sh  install.sh  pyproject.toml
dashboard/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
data/: personality.yaml
docs/: ARCHITECTURE.md  GEMINI-HANDOFF.md  PRD.md  ROADMAP.md  integration-api.md
migrations/: 001_initial.sql  002_memory.sql  003_scraped_pages.sql  004_tasks.sql  005_action_log.sql  006_goals_todos_reminders.sql  007_corrections.sql  008_traces.sql  009_subagent_tasks.sql  010_documents.sql  011_approvals.sql  012_vector_768d.sql  013_peer_messages.sql  014_conversation_title.sql  015_evolution.sql  016_phase2a.sql  017_phase2b.sql  018_hybrid_search.sql  019_cron_entries.sql  020_agent_templates.sql  021_peer_message_rejected.sql  022_contact_cards.sql  023_document_provenance.sql  024_drop_deploy_target_constraint.sql  025_users.sql  026_document_text.sql  027_query_log.sql  028_query_log_vec.sql  029_skill_usage.sql  030_query_log_tokens.sql  031_task_plans.sql  032_user_profile.sql  033_user_facts.sql  034_experiences.sql  035_enriched_extractions.sql  036_plan_outcomes.sql  037_unified_scheduler.sql  038_notebooks.sql  039_kanban.sql  040_artifacts.sql
odigos/: config.py  dashboard.py  db.py  main.py
site/: LAUNCH-PLAN.md  index.html
skills/: agent-browser.md  general-chat.md  google-workspace.md  journal.md  kanban.md  research-deep-dive.md  summarize-doc.md  summarize-page.md  tag-conversation.md
tests/: conftest.py  test_action_log.py  test_agent_client.py  test_agent_service.py  test_agent_ws.py  test_api_agent_message.py  test_api_agents_spawn.py  test_api_auth.py  test_api_budget.py  test_api_conversations.py  test_api_evolution.py  test_api_goals.py  test_api_integration.py  test_api_memory.py  test_api_message.py  test_api_metrics.py  test_api_plugins.py  test_api_settings.py  test_api_setup.py  test_api_upload.py  test_api_ws.py  (+132 more)
(+331 files in other folders)
