[project]
name = "odigos"
version = "0.1.0"
description = "Self-hosted personal AI agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "sentence-transformers[onnx]>=3.0.0",
    "tiktoken>=0.7.0",
    "python-dateutil>=2.9.0",
    "feedparser>=6.0.0",
    "scrapling[fetchers]>=0.3.0",
    "mcp>=1.25.0",
    "chonkie[semantic]>=1.0.0",
    "markitdown[all]>=0.1.0",
    "einops>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]
stt = ["moonshine-voice>=1.0.0"]
tts = ["pocket-tts>=0.1.0", "scipy"]
audio = ["moonshine-voice>=1.0.0", "pocket-tts>=0.1.0", "scipy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
odigos = "odigos.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
